# atct

./: .gitignore  LICENSE  README.md  example_usage.py  pyproject.toml  test_current_api.py
examples/: README.md  example_async_reaction_calculations.py  example_async_scaling_demo.py  example_blocking_usage.py  example_reaction_calculations.py  example_usage.py  example_xyz_helpers.py
src/atct/: __init__.py
src/atct/api/: __init__.py  _config.py  _http.py  api.py  exceptions.py  models.py  pandas_io.py
tests/: test_api_v1.py  test_imports.py  test_models.py  test_species_rdkit_smiles_xyz.py  test_xyz_helpers.py
